Add new Powerset construction